--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "nightingale-guesthouse",
 	"private": true,
-	"version": "0.0.1",
+	"version": "0.1.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -11,7 +11,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
+		"lint": "prettier --check . && eslint .",
+		"release": "changeset version && changeset publish"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.29.5",
